[gd_scene load_steps=26 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/hiscore.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/PrStart.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://logo/spaceinvaders.png" type="Texture" id=4]
[ext_resource path="res://touchbuttons/shadedDark05.png" type="Texture" id=5]
[ext_resource path="res://touchbuttons/flatDark04.png" type="Texture" id=6]
[ext_resource path="res://touchbuttons/shadedDark06.png" type="Texture" id=7]
[ext_resource path="res://touchbuttons/flatDark05.png" type="Texture" id=8]
[ext_resource path="res://touchbuttons/shadedDark49.png" type="Texture" id=9]
[ext_resource path="res://touchbuttons/flatDark48.png" type="Texture" id=10]
[ext_resource path="res://slide_textures/slide_grab_texture.png" type="Texture" id=11]
[ext_resource path="res://slide_textures/slide_texture.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 16, 16 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="CircleShape2D" id=9]
radius = 50.0

[sub_resource type="CircleShape2D" id=10]
radius = 50.0

[sub_resource type="CircleShape2D" id=11]
radius = 60.0

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="game_node" type="Node" parent="."]

[node name="hiscore" parent="." instance=ExtResource( 2 )]
margin_top = 108.0
margin_bottom = 228.0

[node name="best_players" type="Label" parent="hiscore"]
margin_right = 180.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.74902, 0.0235294, 0.733333, 1 )
custom_fonts/font = SubResource( 1 )
text = "BEST PLAYERS"
align = 1
valign = 1

[node name="btn_new_game" type="Button" parent="."]
margin_left = 44.0
margin_top = 255.0
margin_right = 136.0
margin_bottom = 277.0
custom_colors/font_color_hover = Color( 0.937255, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.560784, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "PLAY"

[node name="btn_options" type="Button" parent="."]
margin_left = 17.0
margin_top = 279.0
margin_right = 163.0
margin_bottom = 301.0
custom_colors/font_color_hover = Color( 0.937255, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.560784, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "OPTIONS"

[node name="title" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="options" type="Node2D" parent="."]
position = Vector2( -180, 0 )

[node name="btn_OK" type="Button" parent="options"]
margin_left = 57.0
margin_top = 279.0
margin_right = 123.0
margin_bottom = 301.0
custom_colors/font_color_hover = Color( 0.937255, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.560784, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "OK"

[node name="title" type="Label" parent="options"]
margin_top = 5.0
margin_right = 180.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.560784, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "OPTIONS"
align = 1
valign = 1

[node name="sound_fx" type="Label" parent="options"]
margin_left = 4.0
margin_top = 60.0
margin_right = 184.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 8 )
text = "SOUND_FX"
align = 1
valign = 1

[node name="volume_control" type="HScrollBar" parent="options"]
margin_left = 20.0
margin_top = 84.0
margin_right = 164.0
margin_bottom = 100.0
custom_styles/grabber_highlight = SubResource( 12 )
custom_styles/grabber = SubResource( 12 )
custom_styles/scroll_focus = SubResource( 13 )
custom_styles/scroll = SubResource( 13 )
custom_styles/grabber_pressed = SubResource( 12 )
max_value = 1.0
step = 0.1

[node name="music_fx" type="Label" parent="options"]
margin_left = 4.0
margin_top = 144.0
margin_right = 184.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 8 )
text = "MUSIC_FX"
align = 1
valign = 1

[node name="music_control" type="HScrollBar" parent="options"]
margin_left = 20.0
margin_top = 168.0
margin_right = 164.0
margin_bottom = 184.0
custom_styles/grabber_highlight = SubResource( 12 )
custom_styles/grabber = SubResource( 12 )
custom_styles/scroll_focus = SubResource( 13 )
custom_styles/scroll = SubResource( 13 )
custom_styles/grabber_pressed = SubResource( 12 )
max_value = 1.0
step = 0.1

[node name="camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="tween_camera" type="Tween" parent="."]

[node name="controls" type="Node2D" parent="."]
visible = false

[node name="left" type="TouchScreenButton" parent="controls"]
position = Vector2( 12, 276 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )
shape = SubResource( 9 )
passby_press = true
action = "ui_left"
visibility_mode = 1

[node name="right" type="TouchScreenButton" parent="controls"]
position = Vector2( 64, 276 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 7 )
pressed = ExtResource( 8 )
shape = SubResource( 10 )
passby_press = true
action = "ui_right"
visibility_mode = 1

[node name="disparo" type="TouchScreenButton" parent="controls"]
position = Vector2( 125, 270 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 9 )
pressed = ExtResource( 10 )
shape = SubResource( 11 )
action = "disparo"
visibility_mode = 1

[connection signal="pressed" from="btn_new_game" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="btn_options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="options/btn_OK" to="." method="_on_btn_OK_pressed"]
[connection signal="value_changed" from="options/volume_control" to="." method="_on_volume_control_value_changed"]
[connection signal="value_changed" from="options/music_control" to="." method="_on_volume_control_value_changed"]
